--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,44 @@ a {
   color: #006400;
 }
 
+.form_wrapper {
+  display: grid;
+  font-family:monospace;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem 1rem;
+  display:inline-block;
+  border: 3px solid #333333;
+  font-size: 2.5rem;
+  border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+  letter-spacing: 0.2ch;
+  background: #fef9e9;
+  position: relative;
+  left: 30%;
+  line-height: 50px;
+}
+
+.form, .new_form {
+  font-size: 20px;
+}
+
+.new_form_wrapper {
+  display: grid;
+  font-family:monospace;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2rem 4rem;
+  display:inline-block;
+  border: 3px solid #333333;
+  font-size: 2.5rem;
+  border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+  letter-spacing: 0.2ch;
+  background: #fef9e9;
+  position: relative;
+  left: 10%;
+  line-height: 50px;
+}
+
 .precious_head{
   font-family: 'Shadows Into Light', cursive;
   font-size: 150%;
