--- a/views/sources/index.erb
+++ b/views/sources/index.erb
@@ -1,4 +1,5 @@
-<table style="table-layout:fixed; width:100%">
+<div class="source_index_wrapper">
+<table class="source_index" style="table-layout:fixed; width:100%">
   <tr>
     <th>Sources: </th>
     <th>Description: </th>
@@ -14,6 +15,7 @@
   </tr>
 </table>
   <% end %>
+</div>
 </div>
 <br>
 <br>
