excess code cut, styling finalised, folder system optimised

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,17 +3,15 @@
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/reset.css">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <br>
   <title class="title">Tubbs's local helper</title>
-
-
 </head>
+
 <body>
   <header class="header">
-    <!-- <img class="banner" src="https://img.geocaching.com/cache/large/86d660fd-f8da-4af8-9723-d4d275940e56.jpg" alt="a local shop"> -->
     <nav class="menu">
       <li class="menu-item"><a href='/'>Home</a></li>
       <li class="menu-item"><a href='/a-local-shop'>Tubbs's precious things</a></li>
@@ -25,7 +23,4 @@
   <br>
     <%= yield %>
 </body>
-
-
-
 </html>
