--- a/views/precious_things/create.erb
+++ b/views/precious_things/create.erb
@@ -1,3 +1,13 @@
 <div class="create">
   <h1>Ooh! A new <i>local</i> treasure!</h1>
 </div>
+
+<!-- <div class="go_back">
+  <h2><a href="/a-local-shop">Let's head back!<h2>
+</div>
+<br>
+<br>
+<br> -->
+<!-- <form action="/a-local-shop">
+  <input type="button" value="Let's head back!" onclick="/a-local-shop">
+</form> -->
