back button for create route added

--- a/views/precious_things/create.erb
+++ b/views/precious_things/create.erb
@@ -11,3 +11,5 @@
 <!-- <form action="/a-local-shop">
   <input type="button" value="Let's head back!" onclick="/a-local-shop">
 </form> -->
+
+<a href="/a-local-shop" class="back_button">Let's head back!</a>
