--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,48 +281,26 @@ h1 {
 }
 
 .back_button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
-	box-shadow:inset 0px 1px 0px 0px #d9fbbe;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b8e356), color-stop(1, #a5cc52));
-	background:-moz-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
-	background:-webkit-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
-	background:-o-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
-	background:-ms-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
-	background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b8e356', endColorstr='#a5cc52',GradientType=0);
-	background-color:#b8e356;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #83c41a;
-	display:inline;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:monospace;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #86ae47;
+  background: #fef9e9;
+  background-image: -webkit-linear-gradient(top, #fef9e9, #fef9e9);
+  background-image: -moz-linear-gradient(top, #fef9e9, #fef9e9);
+  background-image: -ms-linear-gradient(top, #fef9e9, #fef9e9);
+  background-image: -o-linear-gradient(top, #fef9e9, #fef9e9);
+  background-image: linear-gradient(to bottom, #fef9e9, #fef9e9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: monospace;
+  color: #2aa800;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid black 3px;
+  text-decoration: none;
   width: 40%;
-  margin-left: 43%;
+  margin-left: 40%;
   margin-right: 30%
 }
-.back_button:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #a5cc52), color-stop(1, #b8e356));
-	background:-moz-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
-	background:-webkit-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
-	background:-o-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
-	background:-ms-linear-gradient(top, #a5cc52 5%, #b8e356 100%);
-	background:linear-gradient(to bottom, #a5cc52 5%, #b8e356 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5cc52', endColorstr='#b8e356',GradientType=0);
-	background-color:#a5cc52;
-}
-.back_button:active {
-	position:relative;
-	top:1px;
-}
+
 
 .menu {
   background-color: #817150 0.9;
